Eliminate all duplicate dependencies